; ModuleID = '/home/carl/AnghaBench/redis/src/extr_t_hash.c_hashTypeGetFromZiplist.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_t_hash.c_hashTypeGetFromZiplist.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64, i8* }

@OBJ_ENCODING_ZIPLIST = common dso_local global i64 0, align 8
@ZIPLIST_HEAD = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @hashTypeGetFromZiplist(%struct.TYPE_3__* %0, i64 %1, i8** %2, i32* %3, i64* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.TYPE_3__*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i8**, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i64*, align 8
  %12 = alloca i8*, align 8
  %13 = alloca i8*, align 8
  %14 = alloca i8*, align 8
  %15 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %7, align 8
  store i64 %1, i64* %8, align 8
  store i8** %2, i8*** %9, align 8
  store i32* %3, i32** %10, align 8
  store i64* %4, i64** %11, align 8
  store i8* null, i8** %13, align 8
  store i8* null, i8** %14, align 8
  %16 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = load i64, i64* @OBJ_ENCODING_ZIPLIST, align 8
  %20 = icmp eq i64 %18, %19
  %21 = zext i1 %20 to i32
  %22 = call i32 @serverAssert(i32 %21)
  %23 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %24 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %23, i32 0, i32 1
  %25 = load i8*, i8** %24, align 8
  store i8* %25, i8** %12, align 8
  %26 = load i8*, i8** %12, align 8
  %27 = load i32, i32* @ZIPLIST_HEAD, align 4
  %28 = call i8* @ziplistIndex(i8* %26, i32 %27)
  store i8* %28, i8** %13, align 8
  %29 = load i8*, i8** %13, align 8
  %30 = icmp ne i8* %29, null
  br i1 %30, label %31, label %49

31:                                               ; preds = %5
  %32 = load i8*, i8** %13, align 8
  %33 = load i64, i64* %8, align 8
  %34 = inttoptr i64 %33 to i8*
  %35 = load i64, i64* %8, align 8
  %36 = call i32 @sdslen(i64 %35)
  %37 = call i8* @ziplistFind(i8* %32, i8* %34, i32 %36, i32 1)
  store i8* %37, i8** %13, align 8
  %38 = load i8*, i8** %13, align 8
  %39 = icmp ne i8* %38, null
  br i1 %39, label %40, label %48

40:                                               ; preds = %31
  %41 = load i8*, i8** %12, align 8
  %42 = load i8*, i8** %13, align 8
  %43 = call i8* @ziplistNext(i8* %41, i8* %42)
  store i8* %43, i8** %14, align 8
  %44 = load i8*, i8** %14, align 8
  %45 = icmp ne i8* %44, null
  %46 = zext i1 %45 to i32
  %47 = call i32 @serverAssert(i32 %46)
  br label %48

48:                                               ; preds = %40, %31
  br label %49

49:                                               ; preds = %48, %5
  %50 = load i8*, i8** %14, align 8
  %51 = icmp ne i8* %50, null
  br i1 %51, label %52, label %60

52:                                               ; preds = %49
  %53 = load i8*, i8** %14, align 8
  %54 = load i8**, i8*** %9, align 8
  %55 = load i32*, i32** %10, align 8
  %56 = load i64*, i64** %11, align 8
  %57 = call i32 @ziplistGet(i8* %53, i8** %54, i32* %55, i64* %56)
  store i32 %57, i32* %15, align 4
  %58 = load i32, i32* %15, align 4
  %59 = call i32 @serverAssert(i32 %58)
  store i32 0, i32* %6, align 4
  br label %61

60:                                               ; preds = %49
  store i32 -1, i32* %6, align 4
  br label %61

61:                                               ; preds = %60, %52
  %62 = load i32, i32* %6, align 4
  ret i32 %62
}

declare dso_local i32 @serverAssert(i32) #1

declare dso_local i8* @ziplistIndex(i8*, i32) #1

declare dso_local i8* @ziplistFind(i8*, i8*, i32, i32) #1

declare dso_local i32 @sdslen(i64) #1

declare dso_local i8* @ziplistNext(i8*, i8*) #1

declare dso_local i32 @ziplistGet(i8*, i8**, i32*, i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
